Fixed layout on mobile

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -82,6 +82,10 @@ fa-app {
 	word-break: normal;
 }
 
+.editor-container {
+	overflow: hidden;
+}
+
 .preview-container {
 	overflow: auto;
 }
